--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,10 @@ dependencies:
   awesome_dialog: ^3.2.0
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
-
-
+  url_launcher: ^6.2.2
+  provider: ^6.1.1
+  cached_memory_image: "^1.2.1"
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
