--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   provider: ^6.1.1
   cached_memory_image: "^1.2.1"
   badges: ^3.1.2
+  background_service_easy: ^1.0.0
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
