--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   badges: ^3.1.2
   background_service_easy: ^1.0.0
   dio: ^5.4.0
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  path_provider: ^2.1.1
+  flutter_background_service: ^5.0.5
 
 dev_dependencies:
   flutter_test:
