--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,13 @@ dependencies:
   provider: ^6.1.1
   cached_memory_image: "^1.2.1"
   badges: ^3.1.2
-  background_service_easy: ^1.0.0
   dio: ^5.4.0
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.1
   flutter_background_service: ^5.0.5
+  flutter_local_notifications: ^16.3.0
+
 
 dev_dependencies:
   flutter_test:
