--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   path_provider: ^2.1.1
   flutter_background_service: ^5.0.5
   flutter_local_notifications: ^16.3.0
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  image_picker: ^1.0.4
+  permission_handler: ^11.0.1
+  dotted_border: ^2.1.0
+
 
 
 
