--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,17 @@
-<manifest xmlns:tools="http://schemas.android.com/tools"
+<manifest
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.helloworld"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+
 
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <uses-permission android:minSdkVersion="34" android:name="android.permission.USE_EXACT_ALARM"
+        tools:ignore="ExactAlarm" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
@@ -22,6 +28,7 @@
 
 
     <application
+        tools:replace="android:label"
         android:label="E-Ligtas"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
