--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,8 @@ dependencies:
   image_picker: ^1.0.4
   permission_handler: ^11.0.1
   dotted_border: ^2.1.0
-
-
+  flutter_image_compress: ^2.1.0
+  background_fetch: ^1.2.2
 
 
 dev_dependencies:
