--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.1
-  flutter_background_service: ^5.0.5
   flutter_local_notifications: ^16.3.0
   geolocator: ^10.1.0
   geocoding: ^2.1.1
@@ -58,7 +57,7 @@ dependencies:
   permission_handler: ^11.0.1
   dotted_border: ^2.1.0
   flutter_image_compress: ^2.1.0
-  background_fetch: ^1.2.2
+  workmanager: ^0.5.2
 
 
 dev_dependencies:
