--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,13 +23,14 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 
 
 
     <application
         tools:replace="android:label"
-        android:label="E-Ligtas"
+        android:label="E-Ligtas Sector"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
         >
