--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   permission_handler: ^11.0.1
   dotted_border: ^2.1.0
   flutter_image_compress: ^2.1.0
+  card_swiper: ^3.0.1
 
 
 
